# UDPCommunication

./: CMakeLists.txt  README.md  install-udpcomm.sh  out.txt
include/: scriptexecutor.h  scriptreader.h  udpcommand.h  udpcommunicationstrings.h
scripts/: commands.txt  test.sc
src/: scriptexecutor.cpp  scriptreader.cpp  udpcomm.cpp  udpcommand.cpp  udpcommunicationstrings.cpp
